# university-bachelor-semester-project-6

./: .gitignore  Cargo.toml  LICENSE  README.adoc  deny.toml  flake.nix
benchmarks/: v01_base.json  v02_byte_file_parsing.json  v03_ahash_hash_function.json
crates/iterations/: Cargo.toml  build.rs
crates/iterations/benches/: bench.rs
crates/iterations/data/: ascii_characters.txt  duplicate_stations_with_different_temperatures.txt  negative_zero_and_positive_temperatures.txt  one_station.txt  one_station_with_different_temperatures.txt  realistic_measurements_16384_lines.txt  station_name_with_spaces.txt  temperature_rounding.txt
crates/iterations/src/: lib.rs  main.rs
crates/iterations/src/iterations/: v01_base.rs  v02_byte_file_parsing.rs  v03_ahash_hash_function.rs
crates/plot/: Cargo.toml
crates/plot/src/: benchmarks.rs  cli.rs  main.rs  plot.rs
